<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="Shopping List"
        android:id="@+id/shoppingList"
        android:icon="@drawable/ic_shopping_cart"/>

    <item
        android:title="Recipes"
        android:id="@+id/recipe"
        android:icon="@drawable/ic_recipe"/>

    <item
        android:title="Pantry"
        android:id="@+id/pantry"
        android:icon="@drawable/ic_pantry"/>

    <item
        android:title="Profile"
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"/>

</menu>